chore: fix vertical alignment

--- a/packages/root-cms/ui/components/ComponentPickerModal/ComponentPickerModal.css
+++ b/packages/root-cms/ui/components/ComponentPickerModal/ComponentPickerModal.css
@@ -166,3 +166,7 @@
   display: flex;
   justify-content: flex-start;
 }
+
+.ComponentPickerModal__controls__layout .mantine-SegmentedControl-label {
+  display: flex;
+}
